# aioptimizer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  PROGRESS.md  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: progress-tracker.md
backend/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt  settings.py
backend/dependencies/: __init__.py
backend/migrations/: env.py
backend/models/: __init__.py  user.py
backend/routers/: api.py  investigation.py  optimization.py  page_fetcher.py  user.py
backend/schemas/: __init__.py  base.py
backend/schemas/request/: investigation.py  optimization.py  user.py
backend/schemas/response/: investigation.py  optimization.py  user.py
backend/server/: __init__.py
backend/services/: investigation_service.py  optimization_service.py  page_fetcher_service.py  user_service.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  wrangler.toml
frontend/src/: index.js
